@@ -20,6 +20,7 @@ sc8pr 2.2.dev...
 ** Drag slider knob from any point rather than only the center
 ** Default knob size based on number of steps
 *** Add 'Canvas.call', 'Canvas.scroll' and 'Canvas.scrollTo' methods
+*** Standardize attributes (target, focus, hover, handler) for sc8pr events
 *** Add 'scrollable' and 'spos' properties to 'Graphic' class
 *** Add 'dpos' method to 'Canvas' and 'sc8pr.gui._SCanvas' classes
 *** Add 'sc8pr.gui.scroll' and 'sc8pr.gui.tk' modules
